--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,12 @@
   pointer-events: none;
 }
 
+.chart {
+  background-color: rgba(255, 255, 255, 0.2);
+  margin: 20px 0;
+  padding: 20px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
